<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activityProfile">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="@string/textViewYourProfile" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewYourName"
        android:textSize="25dp" />


    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="enter your name here"
        android:textSize="25dp"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textSize="25dp"
        android:text="@string/textViewProEmail" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="enter email here"
        android:textSize="25dp"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textSize="25dp"
        android:text="@string/textViewYourPicture" />


    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:src="@android:drawable/picture_frame" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textSize="15dp"
        android:text="@string/textViewClickPicture" />

    <Button
        android:id="@+id/btnGotoToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnGoToToolbar" />

    <Button
        android:id="@+id/btnGotoChat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnGoToChat" />


</LinearLayout>